--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/TabContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TabContainerFragment">
+    >
+    <!--tools:context=".CardUiListFragment"-->
+    <!-- TODO: Update blank fragment layout -->
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
