--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -7,6 +7,12 @@
     <!--tools:context=".CardUiListFragment"-->
     <!-- TODO: Update blank fragment layout -->
 
+    <!--<Button-->
+        <!--android:id="@+id/btn_campaign"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="キャンペーン始めました！" />-->
+
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
