--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,48 +5,76 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/tool_bar"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
         <Spinner
             android:id="@+id/tool_bar_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </android.support.v7.widget.Toolbar>
-    <android.support.v4.app.FragmentTabHost
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@android:id/tabhost"
+
+    <FrameLayout
+        android:id="@+id/homeTabContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tool_bar">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <!-- tab部分 -->
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:showDividers="none"
-                android:orientation="horizontal" />
-            <!-- contents -->
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_above="@android:id/tabs" />
-            <!-- contents -->
-            <FrameLayout
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@android:id/tabs" />
-        </RelativeLayout>
-    </android.support.v4.app.FragmentTabHost>
+        android:layout_height="457dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="55dp"
+        android:visibility="visible">
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/noticeTabContainer"
+        android:layout_width="match_parent"
+        android:layout_height="457dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="55dp"
+        android:visibility="gone">
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/pointTabContainer"
+        android:layout_width="match_parent"
+        android:layout_height="457dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="55dp"
+        android:visibility="gone">
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/historyTabContainer"
+        android:layout_width="match_parent"
+        android:layout_height="457dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="55dp"
+        android:visibility="gone">
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/othersTabContainer"
+        android:layout_width="match_parent"
+        android:layout_height="457dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="55dp"
+        android:visibility="gone">
+    </FrameLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="bottom"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/menu_bottom_navigation">
+    </android.support.design.widget.BottomNavigationView>
+
 </RelativeLayout>
