--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/nav_notice"
         android:icon="@drawable/selector_bottom_tab_notice"
-        android:title="お知らせ"/>
+        android:title="天気"/>
     <item
         android:id="@+id/nav_point"
         android:icon="@drawable/selector_bottom_tab_point"
