--- a/app/src/main/res/layout/fragment_weather_info.xml
+++ b/app/src/main/res/layout/fragment_weather_info.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable name="viewModel" type="com.example.komuroshun.androidtabui.viewmodel.WeatherInfoViewModel" />
+    </data>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tvCityName"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"/>
-
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tvCityName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.mCityName}"
+                android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/tvWeatherTelop"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.mTelop}"
+                android:textSize="20sp"
+                android:layout_weight="1"/>
+        </LinearLayout>
         <TextView
-            android:id="@+id/tvWeatherTelop"
-            android:layout_width="0dp"
+            android:id="@+id/tvWeatherDesc"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_weight="1"/>
-
+            android:layout_marginBottom="30dp"
+            android:text="@{viewModel.mDescription}"
+            android:textSize="15sp"/>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvWeatherDesc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:textSize="15sp"/>
-
-</LinearLayout>
+</layout>
