--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-    <!--tools:context=".CardUiListFragment"-->
-
+    android:layout_height="match_parent">
     <Button
         android:id="@+id/btn_campaign"
         android:layout_width="match_parent"
@@ -18,7 +14,6 @@
         android:textSize="16dp"
         android:textColor="#ff8c00"
         android:visibility="invisible" />
-
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
