Changed main color

--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -12,7 +12,7 @@
         android:textAlignment="textStart"
         android:text="キャンペーンはじめました！"
         android:textSize="16dp"
-        android:textColor="#ff8c00"
+        android:textColor="@color/colorAccent"
         android:visibility="invisible" />
     <ListView
         android:id="@android:id/list"
