--- a/app/src/main/res/layout/fragment_weather_info.xml
+++ b/app/src/main/res/layout/fragment_weather_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="viewModel" type="com.example.komuroshun.androidtabui.viewmodel.WeatherInfoViewModel" />
+        <variable name="viewModel" type="com.example.komuroshun.androidtabui.weather.WeatherInfoViewModel" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
