--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
     </FrameLayout>
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottomNavigation"
+        android:id="@+id/navigationBottom"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -52,6 +52,7 @@
         app:itemIconTint="@drawable/selector_bottom_tab"
         app:itemTextColor="@drawable/selector_bottom_tab"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_bottom_navigation">
     </android.support.design.widget.BottomNavigationView>
 </android.support.constraint.ConstraintLayout>
